dimagi-SalesforceFB/src/objects/Accounting_SubscriptionAdjustment__c.object
<CustomObject>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <label>method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>subscription</label>
        <referenceTo>Accounting_Subscription__c</referenceTo>
        <relationshipLabel>Accounting_SubscriptionAdjustment</relationshipLabel>
        <relationshipName>Accounting_SubscriptionAdjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accounting_SubscriptionAdjustment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_SubscriptionAdjustment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>